add test and cleanup code