@@ -5,8 +5,21 @@ import org.catools.athena.core.common.entity.AppVersion;
 import org.catools.athena.core.common.entity.Project;
 import org.catools.athena.core.common.entity.User;
 import org.catools.athena.core.model.MetadataDto;
-import org.catools.athena.tms.common.entity.*;
-import org.catools.athena.tms.model.*;
+import org.catools.athena.tms.common.entity.Item;
+import org.catools.athena.tms.common.entity.ItemMetadata;
+import org.catools.athena.tms.common.entity.ItemType;
+import org.catools.athena.tms.common.entity.Priority;
+import org.catools.athena.tms.common.entity.Status;
+import org.catools.athena.tms.common.entity.StatusTransition;
+import org.catools.athena.tms.common.entity.TestCycle;
+import org.catools.athena.tms.common.entity.TestExecution;
+import org.catools.athena.tms.model.ItemDto;
+import org.catools.athena.tms.model.ItemTypeDto;
+import org.catools.athena.tms.model.PriorityDto;
+import org.catools.athena.tms.model.StatusDto;
+import org.catools.athena.tms.model.StatusTransitionDto;
+import org.catools.athena.tms.model.TestCycleDto;
+import org.catools.athena.tms.model.TestExecutionDto;
 import org.instancio.Instancio;
 import org.instancio.InstancioApi;
 
@@ -124,7 +137,7 @@ public class TmsBuilder {
         .ignore(field(StatusDto::getId))
         .stream()
         .limit(20)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   public static Status buildStatus(StatusDto status) {
